# open-world

./: .gitignore  .gitmodules  README.md  pyproject.toml
assets/: README.md
assets/irom/: template.yaml
assets/teleop_inits/: README.md  stats.json
assets/teleop_inits/init_0/: initialization.yaml
assets/teleop_inits/init_3/: initialization.yaml
assets/tri/: template.yaml
bash_scripts/: README.md  _env.sh  ar_gpu.slurm  eval_weaver_0617.sbatch  eval_wm.sbatch  interactive_ar.sh  replay_tri_ar_job.sh  setup_eval_env.sh
bash_scripts/inference/: replay_cosmos.sh  replay_wan.sh
bash_scripts/training/: train_dmd_aligned.sh  train_dmd_aligned_v2.sh  train_dmd_aligned_v3.sh  train_dmd_aligned_v3_4gpu.sh  train_dmd_aligned_vN_4gpu.sh
configs/collection/: libero_pi05.yaml
configs/evaluation/: 0617_ar_pi05.yaml  0617_ctrlworld_pi05.yaml  0617_weaver_pi05.yaml  dp_ctrlworld_v0_10demo_base.yaml  dp_ctrlworld_v0_10demo_rank_base.yaml  dp_ctrlworld_v0_10demo_rank_specialist.yaml  dp_ctrlworld_v0_10demo_specialist.yaml  dp_ctrlworld_v0_30demo_base.yaml  dp_ctrlworld_v0_30demo_rank_base.yaml  dp_ctrlworld_v0_30demo_rank_specialist.yaml  dp_ctrlworld_v0_30demo_specialist.yaml  dp_ctrlworld_v0_4demo_base.yaml  dp_ctrlworld_v0_4demo_rank_base.yaml  dp_ctrlworld_v0_4demo_rank_specialist.yaml  dp_ctrlworld_v0_4demo_specialist.yaml  dp_ctrlworld_v0_miss_grasp_base.yaml  dp_ctrlworld_v0_miss_grasp_rank_base.yaml  dp_ctrlworld_v0_miss_grasp_rank_specialist.yaml  dp_ctrlworld_v0_miss_grasp_specialist.yaml  dp_ctrlworld_v0_tip_base.yaml  dp_ctrlworld_v0_tip_rank_base.yaml  dp_ctrlworld_v0_tip_rank_specialist.yaml  dp_ctrlworld_v0_tip_specialist.yaml  dp_ctrlworld_v2_30demo_base.yaml  dp_ctrlworld_v2_30demo_rank_base.yaml  dp_ctrlworld_v2_30demo_rank_specialist.yaml  dp_ctrlworld_v2_30demo_specialist.yaml  dp_ctrlworld_v2_8demo_base.yaml  dp_ctrlworld_v2_8demo_rank_base.yaml  dp_ctrlworld_v2_8demo_rank_specialist.yaml  dp_ctrlworld_v2_8demo_specialist.yaml  dp_ctrlworld_v2_half_base.yaml  dp_ctrlworld_v2_half_rank_base.yaml  dp_ctrlworld_v2_half_rank_specialist.yaml  dp_ctrlworld_v2_half_specialist.yaml  dp_ctrlworld_v2_miss1_base.yaml  dp_ctrlworld_v2_miss1_rank_base.yaml  dp_ctrlworld_v2_miss1_rank_specialist.yaml  dp_ctrlworld_v2_miss1_specialist.yaml  dp_ctrlworld_v2_miss2_base.yaml  (+97 more)
configs/inference/: README.md  ar_wan_droid_2view_cartesian.py  ar_wan_droid_2view_jointpos.py  ar_wan_droid_3view_cartesian.py  ar_wan_droid_3view_jointpos.py  ar_wan_student_2view.py  ar_wan_student_3view_bimanual.py
configs/policies/: openpi_libero.yaml
configs/redteam/: banana_containers_tasks.json  custom_tasks.example.json  example_redteam.yaml  template_initialization.yaml
configs/rl/: rl_finetune_pi0_droid.yaml
configs/scenegen/: template_initialization.yaml  template_vid15.yaml
configs/scenegen/suites/: example.yaml
configs/training/: ar_cosmos2_2b.py  ar_cosmos_droid.py  ar_cosmos_studentinit_droid.py  ar_cosmos_teacher_droid.py  ar_wan_1_3b.py  ar_wan_droid.py  ar_wan_droid_aligned.py  ar_wan_droid_aligned_v10_4gpu.py  ar_wan_droid_aligned_v11_4gpu.py  ar_wan_droid_aligned_v2.py  ar_wan_droid_aligned_v2_diag.py  ar_wan_droid_aligned_v2_diag_cfg.py  ar_wan_droid_aligned_v2_diag_lr.py  ar_wan_droid_aligned_v3.py  ar_wan_droid_aligned_v3_4gpu.py  ar_wan_droid_aligned_v4_4gpu.py  ar_wan_droid_aligned_v5_4gpu.py  ar_wan_droid_aligned_v6_4gpu.py  ar_wan_droid_aligned_v7_4gpu.py  ar_wan_droid_aligned_v8_4gpu.py  ar_wan_droid_aligned_v9_4gpu.py  ar_wan_studentinit_droid.py  ar_wan_studentinit_droid_adaln.py  ar_wan_studentinit_droid_aligned.py  ar_wan_studentinit_droid_pe.py  ar_wan_teacher_droid.py  ar_wan_teacher_droid_adaln.py  ar_wan_teacher_droid_aligned.py  ar_wan_teacher_droid_pe.py  libero_adapter.py  libero_wm.py  libero_wm_shortcut.py
configs/world_models/: ctrlworld.yaml  libero.yaml
docs/: ACTION_COND_EXPERIMENTS.md  AUTOREGRESSIVE.md  EVAL.md  HANDOFF_policy_eval_selfcontained.md  LIBERO.md  MODELS.md  README.md  SCENEGEN.md  TELEOPERATION.md  TRAIN_POLICY.md  TRAIN_WORLD_MODEL.md  TRAJECTORY_REPLAY.md  test_case_generation.md
docs/world_model_training/: autoregressive.md  svd.md
openworld/autoregressive/: __init__.py  config.py  model.py  train_midtrain.py  train_self_forcing.py
openworld/autoregressive/backbones/: __init__.py  _attn.py  base.py  cosmos_predict2.py  (+4 more)
openworld/policies/: dp_policy.py  libero_action_adapter.py  molmoact2_loader.py  molmoact2_policy.py  openpi_action_adapter.py  openpi_libero_policy.py  openpi_policy.py  registry.py
openworld/redteam/: __init__.py  config.py  generate_scenes.py  generate_tasks.py  summarize.py  update_history.py
openworld/rewards/: registry.py  vlm_reward_model.py
openworld/runners/: __init__.py  evaluator.py  rl_finetune_runner.py
openworld/scenegen/: __init__.py  guardrail.py  nanobanana.py  pipeline.py
openworld/training/: openpi_trainable.py  ppo.py  reward_scorer.py
openworld/utils/: annotated_video.py  video.py
openworld/world_models/: __init__.py  ar_world_model.py  ctrl_world_loader.py  ctrl_world_world_model.py  registry.py  vidwm_loader.py  vidwm_world_model.py  weaver_world_model.py
scripts/: ar_gpu.slurm  bench_ar_rollout.py  compute_libero_norm_stats.py  decode_libero_latents.py  diag_teacher_score.py  download_ar_weights.sh  eval_libero_real_env.py  eval_teacher_bidir.py  generate_test_case.py  generate_videos.py  interactive_ar.py  marker_env.py  measure_action_gain.py  plot_dmd_metrics.py  preprocess_ar_latents.py  preprocess_libero_for_wm.py  realign_actions_center.py  replay_ar.py  replay_libero_wm_traj.py  run_data_collection.py  run_edit_tasks.py  run_evaluation.py  run_rl_finetune.py  run_suite_rollout.py  score_videos_robometer.py  smoke_wan_real.py  spacemouse_client.py  train_libero_adapter.py  train_libero_wm.py  validate_data.py  validate_gpu.py  validate_train_step.py  videos_to_init_imgs.py
scripts/scenegen/: build_suite.py  make_init12.py  make_suite_add_object.sh  make_suite_background_edit.py  nanobanana_edit.py  remove_object.py
vidwm/video_models/: vidwm_diffusion.py
(+117 files in other folders)
