[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openworld"
version = "0.1.0"
description = "A modular framework for world-model-based robot policy evaluation and fine-tuning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "decord",
    "diffusers==0.34.0",
    "einops",
    "ftfy",
    "hydra-core",
    "imageio[ffmpeg]",
    "joblib",
    "mediapy",
    "natsort",
    "numpy",
    "omegaconf",
    "open_clip_torch",
    "pandas",
    "pillow",
    "pytorch-msssim",
    "pyyaml",
    "rich",
    "scipy",
    "swanlab",
    "torch",
    "torchmetrics",
    "tqdm",
    # CLIP loading in vidwm only needs a relatively-modern transformers; specific
    # versions are pinned by the policy-* extras (openpi -> 4.53.2,
    # molmoact2 -> >=4.57). Both extras are mutually-exclusive (see
    # [tool.uv.conflicts] below) so no two pins coexist.
    "transformers>=4.53.2",
    "wandb",
    "wandb-osh",
]

[project.optional-dependencies]
policy-openpi = [
    # OpenPI was validated against this exact transformers version (matches
    # external/openpi/pyproject.toml). Newer versions may break openpi internals.
    "transformers==4.53.2",
    "augmax>=0.3.4",
    "beartype==0.19.0",
    "chex>=0.1.89",
    "dm-tree>=0.1.8",
    "einops>=0.8.1",
    "etils>=1.9.4",
    "filelock>=3.16.1",
    "flax==0.10.2",
    "flatbuffers>=24.3.25",
    "fsspec[gcs]>=2025.9.0",
    "gym-aloha>=0.1.1",
    "imageio>=2.36.1",
    "jax[cuda12]==0.5.3",
    "jaxtyping==0.2.36",
    "lerobot>=0.3.3",
    "ml_collections==1.0.0",
    "ml-dtypes==0.4.1",
    "numpydantic>=1.6.6",
    "opencv-python>=4.10.0.84",
    "optax>=0.2.4",
    "orbax-checkpoint==0.11.13",
    "polars>=1.30.0",
    "pytest",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.1",
    "tensorstore==0.1.74",
    "tqdm-loggable>=0.2",
    "treescope>=0.1.10",
    "tyro>=0.9.5",
    "typing-extensions>=4.12.2",
    "websockets>=13.0",
]
policy-dp = [
    "gdown==5.2.0",
    "gym==0.22.0",
    "h5py",
    "imageio>=2.35.1",
    "matplotlib==3.7.5",
    "msgpack>=1.0.0",
    "openai",
    "opencv-python",
    "pretty_errors==1.2.25",
    "tyro>=0.9.5",
    "websockets>=13.0",
]
libero = [
    # The LIBERO simulator package itself (vendored under external/openpi,
    # see [tool.uv.sources] below) plus only the runtime deps needed to step
    # the env. We deliberately do NOT use LIBERO's own requirements.txt, which
    # pins numpy==1.22.4 / torch 1.11 and would break this repo's torch/jax
    # stack; these versions resolve cleanly against our existing pins instead.
    "libero",
    "robosuite==1.4.1",
    "bddl==1.0.1",
    "robomimic==0.2.0",
    "easydict",
    "thop",
    "future",
    "cloudpickle",
    "gym==0.25.2",
]
policy-molmoact2 = [
    # MolmoAct2 was validated against transformers 4.57.x per its CLAUDE.md.
    # We bracket the range to avoid silent breakage from newer transformers
    # restructures (the bf16 textual patches in molmoact2_loader.py only match
    # the DROID snapshot revision built against this range).
    "transformers>=4.57,<4.60",
    "accelerate>=0.34",
    "huggingface-hub>=0.24",
    "safetensors>=0.4",
    # Kept for users who also want to drive a remote host_server_droid.py via
    # the optional server_url mode in MolmoAct2Policy. Cheap to install.
    "json-numpy>=0.2.0",
    "requests>=2.32.0",
]
reward-robometer = [
    # Robometer runs in its own venv (external/robometer) due to
    # incompatible dependencies.  This extra is kept as a no-op marker
    # so that `uv sync --extra reward-robometer` doesn't error.
]
reward-topreward = [
    "decord>=0.6.0",
    "moviepy>=1.0.3",
    "opencv-python>=4.8.0",
    "openai",
    "Pillow>=9.0.0",
    "requests>=2.32.4",
]
reward-wm = [
    # World-model novelty reward: dsrl_pi0's reward_server.py runs replay
    # rollouts and scores them by mean LPIPS between the WM prediction and the
    # recorded trajectory. LPIPS is the reward signal, not optional.
    "lpips",
]

[tool.setuptools.packages.find]
include = ["openworld*"]

[tool.uv]
conflicts = [
    [
        { extra = "policy-dp" },
        { extra = "policy-openpi" },
        { extra = "policy-molmoact2" },
    ],
    [
        # LIBERO pins gym==0.25.2, policy-dp pins gym==0.22.0; they can't be
        # installed together. LIBERO is collected/evaluated with the openpi
        # policy (policy-openpi), not the diffusion-policy backend, so this
        # mutual exclusion is harmless.
        { extra = "policy-dp" },
        { extra = "libero" },
    ],
    [
        { extra = "reward-robometer" },
        { extra = "reward-topreward" },
    ],
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "0cf864870cf29f4738d3ade893e6fd13fbd7cdb5" }
# LIBERO must be installed *editable*: its `libero/` package ships no
# __init__.py (implicit namespace package), so the find_packages() in its
# setup.py builds an empty wheel — a normal (git/sdist) install yields no
# modules. Editable mode puts the source tree on sys.path so the namespace
# package imports. The source is openpi's vendored submodule; populate it once
# with `git -C external/openpi submodule update --init third_party/libero`.
# setup.py declares no install_requires, so its runtime deps are pinned in the
# `libero` extra above.
libero = { path = "external/openpi/third_party/libero", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
