[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openworld"
version = "0.1.0"
description = "A modular framework for world-model-based robot policy evaluation and fine-tuning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "decord",
    "diffusers==0.34.0",
    "einops",
    "ftfy",
    "hydra-core",
    "imageio[ffmpeg]",
    "joblib",
    "mediapy",
    "natsort",
    "numpy",
    "omegaconf",
    "open_clip_torch",
    "pandas",
    "pillow",
    "pytorch-msssim",
    "pyyaml",
    "rich",
    "scipy",
    "swanlab",
    "torch",
    "torchmetrics",
    "tqdm",
    # CLIP loading in vidwm only needs a relatively-modern transformers; specific
    # versions are pinned by the policy-* extras (openpi -> 4.53.2,
    # molmoact2 -> >=4.57). Both extras are mutually-exclusive (see
    # [tool.uv.conflicts] below) so no two pins coexist.
    "transformers>=4.53.2",
    "wandb",
    "wandb-osh",
]

[project.optional-dependencies]
policy-openpi = [
    # OpenPI was validated against this exact transformers version (matches
    # external/openpi/pyproject.toml). Newer versions may break openpi internals.
    "transformers==4.53.2",
    "augmax>=0.3.4",
    "beartype==0.19.0",
    "chex>=0.1.89",
    "dm-tree>=0.1.8",
    "einops>=0.8.1",
    "etils>=1.9.4",
    "filelock>=3.16.1",
    "flax==0.10.2",
    "flatbuffers>=24.3.25",
    "fsspec[gcs]>=2025.9.0",
    "gym-aloha>=0.1.1",
    "imageio>=2.36.1",
    "jax[cuda12]==0.5.3",
    "jaxtyping==0.2.36",
    "lerobot>=0.3.3",
    "ml_collections==1.0.0",
    "ml-dtypes==0.4.1",
    "numpydantic>=1.6.6",
    "opencv-python>=4.10.0.84",
    "optax>=0.2.4",
    "orbax-checkpoint==0.11.13",
    "polars>=1.30.0",
    "pytest",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.1",
    "tensorstore==0.1.74",
    "tqdm-loggable>=0.2",
    "treescope>=0.1.10",
    "tyro>=0.9.5",
    "typing-extensions>=4.12.2",
    "websockets>=13.0",
]
policy-dp = [
    "gdown==5.2.0",
    "gym==0.22.0",
    "h5py",
    "imageio>=2.35.1",
    "matplotlib==3.7.5",
    "msgpack>=1.0.0",
    "openai",
    "opencv-python",
    "pretty_errors==1.2.25",
    "tyro>=0.9.5",
    "websockets>=13.0",
]
libero = [
    # NOTE (autoregressive branch): the LIBERO *simulator* deps (libero,
    # robosuite, bddl, robomimic, ...) and their `external/openpi/.../libero`
    # editable source were removed from this branch. The AR world model trains
    # and evaluates on the preprocessed latent dataset and does not step the
    # sim, and the editable source path is not present in this clone (external/
    # is gitignored), which otherwise breaks `uv sync`. Re-add from `main`/
    # `libero` if you need closed-loop sim eval on this branch. Kept as a no-op
    # marker so `uv sync --extra libero` does not error.
]
policy-molmoact2 = [
    # MolmoAct2 was validated against transformers 4.57.x per its CLAUDE.md.
    # We bracket the range to avoid silent breakage from newer transformers
    # restructures (the bf16 textual patches in molmoact2_loader.py only match
    # the DROID snapshot revision built against this range).
    "transformers>=4.57,<4.60",
    "accelerate>=0.34",
    "huggingface-hub>=0.24",
    "safetensors>=0.4",
    # Kept for users who also want to drive a remote host_server_droid.py via
    # the optional server_url mode in MolmoAct2Policy. Cheap to install.
    "json-numpy>=0.2.0",
    "requests>=2.32.0",
]
reward-robometer = [
    # Robometer runs in its own venv (external/robometer) due to
    # incompatible dependencies.  This extra is kept as a no-op marker
    # so that `uv sync --extra reward-robometer` doesn't error.
]
reward-topreward = [
    "decord>=0.6.0",
    "moviepy>=1.0.3",
    "opencv-python>=4.8.0",
    "openai",
    "Pillow>=9.0.0",
    "requests>=2.32.4",
]
reward-wm = [
    # World-model novelty reward: dsrl_pi0's reward_server.py runs replay
    # rollouts and scores them by mean LPIPS between the WM prediction and the
    # recorded trajectory. LPIPS is the reward signal, not optional.
    "lpips",
]
scenegen = [
    # `openworld.scenegen` builds test-case suites from a language instruction +
    # an initial image. The guardrail rewrite (stage 1) calls text Gemini
    # in-process, so google-genai is needed here; the heavy FLUX multiview stage
    # runs out of the external/diffusers fork in a subprocess (not installed via
    # this extra). nanobanana (inside that subprocess) also uses google-genai.
    "google-genai",
]
autoregressive = [
    # Backbone weights (Wan2.1-1.3B, Cosmos-Predict2-2B) and their causal
    # self-forcing distillation live entirely on top of the base deps:
    # `diffusers==0.34.0` already ships both `WanTransformer3DModel` and
    # `CosmosTransformer3DModel`, `torch` provides `flex_attention`, and
    # `transformers` provides the (UM)T5 text encoder. This extra only adds
    # what those pieces need at runtime plus the test harness.
    "sentencepiece",   # UMT5 / T5 tokenizer used by the Wan & Cosmos text encoders
    "safetensors",     # explicit: load sharded Wan/Cosmos transformer weights
    "pytest",          # openworld/autoregressive/tests smoke tests
]

[tool.setuptools.packages.find]
# vidwm* is included so the action encoder it provides imports when the package
# is installed (not only when cwd happens to be the repo root); the AR
# conditioner depends on it.
include = ["openworld*", "vidwm*"]

[tool.uv]
conflicts = [
    [
        { extra = "policy-dp" },
        { extra = "policy-openpi" },
        { extra = "policy-molmoact2" },
    ],
    [
        { extra = "reward-robometer" },
        { extra = "reward-topreward" },
    ],
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "0cf864870cf29f4738d3ade893e6fd13fbd7cdb5" }
# NOTE (autoregressive branch): the `libero` editable source
# (external/openpi/third_party/libero) was removed here — that path is not
# present in this clone and would abort `uv sync`. See the `libero` extra above.

[tool.pytest.ini_options]
testpaths = ["tests"]
